<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/constraintEmployeeDetails"
    tools:context=".ui.employeedetails.EmployeeDetailsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEmployeeDetailsDivider40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEmployeeDetailsDivider30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEmployeeDetailsCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <com.github.florent37.shapeofview.shapes.ArcView
        android:id="@+id/arcView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideEmployeeDetailsDivider40"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_arc_cropDirection="outside"
        app:shape_arc_height="60dp"
        app:shape_arc_position="bottom">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/dummy_employee_details" />


        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/employee_transparent" />
    </com.github.florent37.shapeofview.shapes.ArcView>

    <com.github.florent37.shapeofview.shapes.CircleView
        android:id="@+id/profilePic"
        android:layout_width="@dimen/_90dp"
        android:layout_height="@dimen/_90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtEmployeeName"
        app:shape_circle_borderWidth="@dimen/_1dp">

        <ImageView
            android:id="@+id/employeeProfilePic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_dummy_profile_one" />
    </com.github.florent37.shapeofview.shapes.CircleView>

    <com.sample.employeedetails.widgets.MyTextView
        android:id="@+id/txtEmployeeName"
        style="@style/extra_large_text_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:text="Venkatesh Vignesh"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/txtEmployeeDesc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.sample.employeedetails.widgets.MyTextView
        android:id="@+id/txtEmployeeDesc"
        style="@style/medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:text="(Android Developer)"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <com.sample.employeedetails.widgets.MyCardView
        app:setImage="@drawable/ic_projects_worked"
        app:setText="@string/projects"
        android:id="@+id/card11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_150dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideEmployeeDetailsDivider30">

    </com.sample.employeedetails.widgets.MyCardView>

    <com.sample.employeedetails.widgets.MyCardView
        app:setImage="@drawable/ic_salary_progress"
        app:setText="@string/salary_progress"
        android:id="@+id/card12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_150dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideEmployeeDetailsDivider30" />

    <com.sample.employeedetails.widgets.MyCardView
        app:setImage="@drawable/ic_attendance"
        app:setText="@string/attendance"
        android:id="@+id/card21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card11">

    </com.sample.employeedetails.widgets.MyCardView>

    <com.sample.employeedetails.widgets.MyCardView
        app:setImage="@drawable/ic_team"
        app:setText="@string/team"
        android:id="@+id/card22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card11">

    </com.sample.employeedetails.widgets.MyCardView>

    <com.sample.employeedetails.widgets.MyCardView
        app:setImage="@drawable/ic_device_info"
        app:setText="@string/device_info"
        android:id="@+id/card31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_120dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card21">

    </com.sample.employeedetails.widgets.MyCardView>

    <com.sample.employeedetails.widgets.MyCardView
        app:setImage="@drawable/ic_profile"
        app:setText="@string/_profile"
        android:id="@+id/card32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_120dp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card21">

    </com.sample.employeedetails.widgets.MyCardView>

</androidx.constraintlayout.widget.ConstraintLayout>